--- a/m00/pom.xml
+++ b/m00/pom.xml
@@ -4,6 +4,26 @@
   <artifactId>m00</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  
+  <properties>
+  	<org.springframework.version>3.2.13.RELEASE</org.springframework.version>
+  </properties>
+  
+  <dependencies>
+  	<!-- AWS -->
+  	<dependency>
+		<groupId>com.amazonaws</groupId>
+		<artifactId>aws-java-sdk</artifactId>
+		<version>1.9.14</version>
+	</dependency>
+	<!-- Spring -->
+	<dependency>
+  		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+		<version>${org.springframework.version}</version>
+  	</dependency>
+  </dependencies>
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
