--- a/m00/pom.xml
+++ b/m00/pom.xml
@@ -16,17 +16,41 @@
 		<artifactId>aws-java-sdk</artifactId>
 		<version>1.9.14</version>
 	</dependency>
-	<!-- Spring Framework-->
+	<!-- Spring Framework WebMVC-->
 	<dependency>
   		<groupId>org.springframework</groupId>
 		<artifactId>spring-webmvc</artifactId>
 		<version>${org.springframework.version}</version>
   	</dependency>
+  	<!-- Spring Framework ORM-->
+  	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-orm</artifactId>
+		<version>${org.springframework.version}</version>
+	</dependency>
   	<!-- JavaServer Pages Standard Tag Library -->
   	<dependency>
 		<groupId>jstl</groupId>
 		<artifactId>jstl</artifactId>
 		<version>1.2</version>
+	</dependency>
+	<!-- DataBase Connection Pool (Required for DB stuff)-->
+	<dependency>
+        <groupId>commons-dbcp</groupId>
+        <artifactId>commons-dbcp</artifactId>
+        <version>1.4</version>
+    </dependency>
+  	<!-- Hibernate -->
+  	<dependency>
+	<groupId>org.hibernate</groupId>
+		<artifactId>hibernate-entitymanager</artifactId>
+		<version>4.3.8.Final</version>
+	</dependency>
+  	<!-- MySQL -->
+  	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.34</version>
 	</dependency>
   	
   </dependencies>
